@@ -29,9 +29,13 @@ Changes Since 0.12
 
   - Fix [ 233 ] Change the base URL for the :rfc: role.
 
+* docutils/parsers/rst/directives/misc.py
+
+  - Apply [ 132 ] Add SOURCE_DATE_EPOCH support to date directive.
+
 * docutils/parsers/rst/directives/tables.py
 
-  - Patch [ 120 ] tables accept option widths: list of relative widths, 'auto'
+  - Apply [ 120 ] tables accept option widths: list of relative widths, 'auto'
     or 'grid'.
 
   - Implement feature request [ 48 ]
